review: update README; rm UDT; add NATAnalyzer security policy